tests/expected_invalid_parse_missing_initializer_comma.diag.out
<input>:8:21: error: expected ',' between initializer fields
        Pair { first: 1 second: 2, }
                        ^^^^^^
